--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,7 @@
   flex-direction: column;
   justify-content: center;
   color: #fff;
-  background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+ /* background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%); */
 }
 
 .fa-layer-group,
